# simdjson_python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_results.md  clang-tidy  main.cpp  release_build.bat  run_benchmark.bat  run_test.bat  setup.cmake  setup.py
.github/workflows/: build_pip.yml
benchmark/: benchmark.py  benchmark_append.py  benchmark_assign.py  benchmark_base.py  benchmark_insert.py  benchmark_manager.py  writer.py
src/: main.cpp
test/: test.py  test_access.py  test_append.py  test_assign.py  test_base.py  test_clear_erase.py  test_contains.py  test_conversions.py  test_copy_substr.py  test_ctor.py  test_equality.py  test_find.py  test_find_first_last_of.py  test_insert.py  test_manager.py  test_push_pop.py  test_replace.py  test_rfind.py  test_size_clear.py  test_starts_ends_with.py  test_swap.py  utility.py
